Fixes #17333: Tooltips not showing up

--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -1176,11 +1176,12 @@ ul.list-unstyled > li{
   margin-left: 10px;
 }
 #methods .method-name{
-  margin-bottom: 2px;
+  padding-bottom: 2px;
 }
 .method-content{
   height: 28px;
   display: flex;
+  position: relative;
 }
 .warns{
   margin-top: 2px;
